Fixed bug on mobile phones

--- a/lab2/lab/cinema/style.css
+++ b/lab2/lab/cinema/style.css
@@ -29,10 +29,10 @@ header {
         min-height: 125px;
     }
     nav {
-        margin-top: -115px;
+        margin-top: -100px;
     }
     .name {
-        margin-top: -60px;
+        margin-top: -35px;
     }
   } 
 
